🔧 Add advanced diagnostics and status reporting
- Add DNS connectivity testing before HTTP requests
- Implement status reporting system with success/failure tracking
- Add last success time tracking for better monitoring
- Enhanced logging with response size and connection details
- Update GitHub Actions to display status reports
- Better error categorization and handling

--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -78,6 +78,17 @@ jobs:
             data/
             README.md
           retention-days: 7
+      
+      - name: 📊 顯示爬取狀態
+        if: always()
+        run: |
+          echo "=== 爬取狀態報告 ==="
+          if [ -f "data/crawler_status.json" ]; then
+            echo "📋 狀態檔案存在，顯示內容:"
+            cat data/crawler_status.json
+          else
+            echo "⚠️ 未找到狀態檔案"
+          fi
 
   # 健康檢查任務
   health-check:
